# rust-projects

./: .gitignore  README.md
features-demo/: README.md
features-demo/full-ops/: Cargo.toml
features-demo/full-ops/src/: main.rs
features-demo/math-ops/: Cargo.toml
features-demo/math-ops/src/: lib.rs
features-demo/simple-ops/: Cargo.toml
features-demo/simple-ops/src/: main.rs
led-glyph/: .gitignore  Cargo.toml  README.md  USER-STORIES.md  implementation-plan.md
led-glyph/glyph-cli/: Cargo.toml  README.md
led-glyph/glyph-cli/data/: bitmap-5X5.json  bitmap-8X8.json
led-glyph/glyph-cli/src/: bitmap.rs  cli.rs  main.rs
led-glyph/glyph-cli/src/bitmap/: data_access.rs  mod.rs
led-glyph/glyph-lib/: Cargo.toml
led-glyph/glyph-lib/src/: lib.rs
todo-app/: README.md
todo-app/todo_app_cli/: Cargo.toml
todo-app/todo_app_cli/src/: cli.rs  lib.rs  main.rs
todo-app/todo_app_cli/src/cli/: add.rs  complete.rs  delete.rs  get.rs  mod.rs
todo-app/todo_app_cli/src/printer/: mod.rs
todo-app/todo_app_cli/src/todo_repo/: data_access.rs  mod.rs
todo-app/todo_app_cli/tests/: todo_cli_test.rs
wisecrack-cli/: Cargo.toml  README.md
wisecrack-cli/src/: lib.rs  main.rs
wisecrack-cli/src/cli/: mod.rs
wisecrack-cli/src/data/: mod.rs
wisecrack-cli/src/printer/: mod.rs
wisecrack-cli/tests/: wisecrack_cli_tests.rs
